--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar-row color="primary">
-  <span>Sistema Bancário</span>
-</mat-toolbar-row>
+  <mat-toolbar>
+    <span>Sistema Bancário</span>
+  </mat-toolbar>
