tentando centralizar uma div

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,15 @@
-  <mat-toolbar>
-    <span>Sistema Bancário</span>
-  </mat-toolbar>
+<mat-toolbar>
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>Sistema Bancário</span>
+  <span class="example-spacer"></span>
+  <div class="container">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <span>Usuário</span>
+    </button>
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <span>Cartões</span>
+    </button>
+  </div>
+</mat-toolbar>
