criando caminho de endpoint e iniciando estilo na tela de navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   </button>
   <span>Sistema Bancário</span>
   <span class="example-spacer"></span>
-  <div class="container">
+  <div class="container" style="marker-end: initial;">
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
       <span>Usuário</span>
     </button>
