Realizando implementações, de conta, fica faltando só a function saque, deposito e transferencia

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,8 +8,8 @@
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
       <span>Usuário</span>
     </button>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <span>Cartões</span>
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" routerLink="/contas">
+      <span>Contas</span>
     </button>
   </div>
 </mat-toolbar>
