--- a/src/app/components/contas/salvar-contas/salvar-contas.component.html
+++ b/src/app/components/contas/salvar-contas/salvar-contas.component.html
@@ -1,1 +1,41 @@
-<p>salvar-contas works!</p>
+<div class="container mt-5 d-flex justify-content-center" >
+  <div class="container mt-5 d-flex justify-content-center" >
+      <h1>Nova Conta</h1>
+
+
+      <form [formGroup]="formGroup" class="example-form mt-4"(ngSubmit)="cadastrar()">
+
+          <!--Input de nome do cliente-->
+          <small class="text-danger mb-2" *ngIf="formGroup.get('agencia')?.errors &&
+          formGroup.get('agencia')?.hasError('required')">Campo obrigatório</small>
+          <mat-form-field class="example-full-width">
+              <mat-label>Agência</mat-label>
+              <input matInput formControlName="agencia">
+          </mat-form-field>
+
+
+          <!--Input de saldo do cliente-->
+          <small class="text-danger mb-2"   *ngIf="formGroup.get('saldo')?.errors &&
+          formGroup.get('saldo')?.hasError('required')">Campo obrigatório</small>
+          <mat-form-field class="example-full-width">
+              <mat-label>Saldo</mat-label>
+              <input matInput formControlName="saldo">
+          </mat-form-field>
+
+
+          <!--Input de cliente -->
+          <small class="text-danger mb-2" *ngIf="formGroup.get('cliente')?.errors &&
+          formGroup.get('cliente')?.hasError('required')">Campo obrigatório</small>
+          <mat-form-field class="example-full-width">
+              <mat-label>cliente</mat-label>
+              <input matInput formControlName="cliente">
+          </mat-form-field>
+          <!--Botao de submissao do formulario-->
+          <div class="d-flex justify-content-center">
+              <button [disabled]="!formGroup.valid" type="submit" mat-raised-button color="primary">
+                  Cadastrar
+              </button>
+          </div>
+      </form>
+  </div>
+</div>
