--- a/src/app/components/contas/contas.component.html
+++ b/src/app/components/contas/contas.component.html
@@ -5,9 +5,9 @@
 
     <button mat-raised-button color="primary" routerLink="/contas/novo">Nova conta</button>
 
-    <button mat-raised-button color="accent" routerLink="/contas/id/deposito/">Depósito</button>
-    <button mat-raised-button color="accent" routerLink="/contas/id/saque/">Saque</button>
-    <button mat-raised-button color="primary" routerLink="/contas/id/transferencia/">Transferencia</button>
+    <button mat-raised-button color="accent" routerLink="/contas/:id/deposito/">Depósito</button>
+    <button mat-raised-button color="accent" routerLink="/contas/:id/saque/">Saque</button>
+    <button mat-raised-button color="primary" routerLink="/contas/:id/transferencia/">Transferencia</button>
   </div>
 
 
