--- a/src/app/components/contas/contas.component.html
+++ b/src/app/components/contas/contas.component.html
@@ -1,29 +1,56 @@
-<div class="container mt-5 d-flex justify-content-center" >
-  <div>
-      <h1>Saque</h1>
-      <form [formGroup]="formGroup" class="example-form mt-4" (ngSubmit)="cadastrar()">
-          <small class="text-danger mb-2" *ngIf="formGroup.get('valor')?.errors &&
-          formGroup.get('valor')?.hasError('required')">Campo obrigatório</small>
-          <mat-form-field class="example-full-width">
-              <mat-label>Valor</mat-label>
-              <input matInput formControlName="valor">
-          </mat-form-field>
-          <small class="text-danger mb-2" *ngIf="formGroup.get('conta')?.errors &&
-          formGroup.get('conta')?.hasError('required')">Campo obrigatório</small>
-          <mat-form-field class="example-full-width">
-              <mat-label>Conta</mat-label>
-              <mat-select formControlName="conta">
-                <mat-option *ngFor="let conta of contas"  [value]="conta.id">
-                  {{conta.numero}} - {{conta.agencia}} - {{conta.nomeCliente}}
-                </mat-option>
-              </mat-select>
-          </mat-form-field>
-          <!--Botao de submissao do formulario-->
-          <div class="d-flex justify-content-center">
-              <button [disabled]="!formGroup.valid" type="submit" mat-raised-button color="primary">
-                  Cadastrar
-              </button>
-          </div>
-      </form>
+<div class="container mt-5">
+  <div class="d-flex justify-content-between">
+    <h1>Listagem de contas</h1>
+
+    <button mat-raised-button color="primary" routerLink="/conta/novo">Nova conta</button>
   </div>
+
+  <table mat-table class="mt-5" [dataSource]="dataSource">
+    <!-- Coluna ID -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+
+    <!-- Coluna Nome -->
+    <ng-container matColumnDef="numero">
+      <th mat-header-cell *matHeaderCellDef> Número </th>
+      <td mat-cell *matCellDef="let element"> {{element.numero}} </td>
+    </ng-container>
+
+    <!-- Coluna CPF -->
+    <ng-container matColumnDef="agencia">
+      <th mat-header-cell *matHeaderCellDef> Agência </th>
+      <td mat-cell *matCellDef="let element"> {{element.agencia}} </td>
+    </ng-container>
+
+    <!-- Coluna Email -->
+    <ng-container matColumnDef="saldo">
+      <th mat-header-cell *matHeaderCellDef> Saldo </th>
+      <td mat-cell *matCellDef="let element"> {{element.saldo}} </td>
+    </ng-container>
+
+    <!-- Coluna Status -->
+    <ng-container matColumnDef="cliente">
+      <th mat-header-cell *matHeaderCellDef> Cliente </th>
+      <td mat-cell *matCellDef="let element"> {{element.nomeCliente}} </td>
+    </ng-container>
+
+    <!-- Coluna Funcoes -->
+    <ng-container matColumnDef="funcoes">
+      <th mat-header-cell *matHeaderCellDef> </th>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon fontIcon="edit" [routerLink]="'/conta/editar/' + element.id"  style="cursor:pointer"></mat-icon>
+        <mat-icon fontIcon="delete" (click)="deletarCLiente(element.id)"></mat-icon>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20, 30]"
+    showFirstLastButtons
+    [length]="dataSource.data.length + 1" (page)="onPageChange($event)">
+  </mat-paginator>
 </div>
