--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,9 @@
 <mat-toolbar>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>Sistema Bancário</span>
+  <span routerLink="/">My Bank</span>
   <span class="example-spacer"></span>
-  <div class="container" style="marker-end: initial;">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <span>Usuário</span>
-    </button>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" routerLink="/contas">
-      <span>Contas</span>
-    </button>
-  </div>
+  <button mat-button routerLink="/cliente">Clientes</button>
+  <button mat-button routerLink="/conta">Conta</button>
+  <button mat-button routerLink="/conta/saque">Saque</button>
+  <button mat-button routerLink="/conta/deposito">Depósito</button>
+  <button mat-button routerLink="/conta/transferencia">Transferência</button>
 </mat-toolbar>
